bin/testsuite/tests/compiler/src/errors/compiler621.swg
/*#global testerror "Err0784"
func toto(x: me)
{
}
*/
